NXT-1438: WIP
NXT-1438 (Open knwf / knar file via double click)